# amantha

./: .gitignore  Dockerfile  README.md  deploy.py  home_first_page.txt  pyproject.toml  requirements.txt
.config/: gunicorn.py  ref.nginx  supervisord.conf
app/: webcrawler.py  webcrawler0410.py
app/config/: settings.py  urls.py
app/config/settings/: base.py  dev_dooh.py  dev_hj.py  production.py
app/config/wsgi/: dev_dooh.py  dev_hj.py
app/members/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200329_2021.py  0002_auto_20200401_0118.py  0002_auto_20200402_2123.py  0002_auto_20200404_1758.py  0002_auto_20200405_1809.py  0002_auto_20200408_0106.py  0002_auto_20200411_1558.py  0002_auto_20200414_0136.py  0002_auto_20200418_1802.py  0002_useridealtype_region2.py  0003_auto_20200402_0156.py  0003_auto_20200404_1806.py  0003_auto_20200405_1814.py  0003_auto_20200408_1351.py  0003_auto_20200411_1559.py  0003_auto_20200415_2020.py  0003_remove_userprofile_personality.py  0003_user_nickname.py  0004_auto_20200329_2216.py  0004_auto_20200403_1338.py  0004_auto_20200404_1809.py  0004_auto_20200405_1823.py  0004_auto_20200408_1354.py  0004_auto_20200411_1621.py  0004_remove_userinfo_personality.py  0005_auto_20200329_2223.py  0005_auto_20200403_1339.py  0005_auto_20200404_1954.py  0005_auto_20200406_1543.py  0005_auto_20200411_2053.py  0005_userinfo_personality.py  0006_auto_20200329_2227.py  (+9 more)
app/restaurants/: api.py  apis.py  models.py  serializers.py  urls.py
app/templates/: kakao.html
(+132 files in other folders)
