[tool.poetry]
name = "amantha"
version = "0.1.0"
description = ""
authors = ["Hyojin Kwon <raccoonhj33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
djangorestframework = "^3.11.0"
gunicorn = "^20.0.4"
django-extensions = "^2.2.9"
boto3 = "^1.12.30"
django-storages = "^1.9.1"
pillow = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
