[tool.poetry]
name = "amantha"
version = "0.1.0"
description = ""
authors = ["Hyojin Kwon <raccoonhj33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
djangorestframework = "^3.11.0"
gunicorn = "^20.0.4"
django-extensions = "^2.2.9"
boto3 = "^1.12.30"
django-storages = "^1.9.1"
pillow = "^7.0.0"
supervisor = "^4.1.0"
requests = "^2.23.0"
notebook = "^6.0.3"
beautifulsoup4 = "^4.9.0"
selenium = "^3.141.0"
django-phone-field = "^1.8.0"
django-phonenumber-field = "^4.0.0"
phonenumbers = "^8.12.1"
django-filter = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
